<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/topBackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="99dp"
        android:layout_height="88dp"
        android:layout_margin="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo_da_calculadora_de_gorjetas"
        android:src="@drawable/tips_calculator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="237dp"
        android:layout_height="47dp"
        android:layout_margin="16dp"
        android:text="@string/app_name_desc"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_logo"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_tv_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_total"
            android:inputType="numberDecimal"
            android:textColor="@color/textColorHighContrast"
            android:textColorHint="@color/textColorHintHighContrast" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_number_of_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_total">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_number_of_people"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/digite_o_numero"
            android:inputType="number"
            android:maxLength="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/title_number_of_people">

        <RadioButton
            android:id="@+id/rb_option_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage_10" />

        <RadioButton
            android:id="@+id/rb_option_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage_15" />

        <RadioButton
            android:id="@+id/rb_option_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage_20" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_clean"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/corbuttonclean"
        android:text="@string/btn_clean_text"
        android:textColor="@color/buttontext"
        app:layout_constraintEnd_toStartOf="@+id/btn_done"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_percentage" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/corButtondone"
        android:text="@string/btn_done_text"
        android:textColor="@color/buttontext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_clean"
        app:layout_constraintTop_toBottomOf="@+id/rg_percentage" />


    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_clean"
        tools:text="57.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
